// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Organization should render with organization permitted by default, and expand data when button is clicked 1`] = `
<div
  class="Expander__ExpanderContainer-fukmjx-0 jPqCCS"
>
  <button
    aria-pressed="false"
    class="Expander__ExpanderTitle-fukmjx-2 hdishk"
  >
    <span
      aria-hidden="true"
      class="Expander__ExpanderPrefix-fukmjx-1 kcIvlE"
    >
      +
    </span>
    Organisaatio 1
  </button>
</div>
`;

exports[`Organization should render with organization permitted by default, and expand data when button is clicked 2`] = `
<div
  class="Expander__ExpanderContainer-fukmjx-0 jPqCCS"
>
  <button
    aria-pressed="true"
    class="Expander__ExpanderTitle-fukmjx-2 cwTaio"
  >
    <span
      aria-hidden="true"
      class="Expander__ExpanderPrefix-fukmjx-1 kcIvlE"
    >
      -
    </span>
    Organisaatio 1
  </button>
  <div
    class="Expander__ExpandedContents-fukmjx-3 efIYGM"
  >
    <div
      class="OrganizationDetails__Details-sc-4gjwy4-0 kRzJui"
    >
      <div
        class="OrganizationDetails__Description-sc-4gjwy4-1 busCdY"
      >
        <b
          class="typography__Bold-sc-1yq3b4j-6 jaOKTJ"
        >
          Tietojen käyttölupa:
        </b>
         Lakiin perustuva tiedonkäyttölupa.
      </div>
      <a
        class="typography__Link-sc-1yq3b4j-5 epyGqB"
        href="https://opintopolku.fi/wp/fi/tietosuojaseloste/"
        target="_blank"
      >
        <test-file-stub
          classname="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 fdjWcT"
        />
        <b
          class="typography__Bold-sc-1yq3b4j-6 jaOKTJ"
        >
          Tarkempi kuvaus lähetetyistä tiedoista
        </b>
      </a>
    </div>
    <div
      class="LogEntries__Container-ufvf4x-0 zfOaI"
    >
      <div
        class="LogEntries__TopRow-ufvf4x-1 bimmMK"
      >
        <button
          aria-pressed="false"
          class="ButtonSmall__TextButton-r8zxw8-0 clXOxN"
        >
          Näytä tietojen käyttökerrat
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Organization should render with organization permitted by user, and expand data when button is clicked 1`] = `
<div
  class="Expander__ExpanderContainer-fukmjx-0 jPqCCS"
>
  <button
    aria-pressed="false"
    class="Expander__ExpanderTitle-fukmjx-2 hdishk"
  >
    <span
      aria-hidden="true"
      class="Expander__ExpanderPrefix-fukmjx-1 kcIvlE"
    >
      +
    </span>
    Organisaatio 2
  </button>
</div>
`;

exports[`Organization should render with organization permitted by user, and expand data when button is clicked 2`] = `
<div
  class="Expander__ExpanderContainer-fukmjx-0 jPqCCS"
>
  <button
    aria-pressed="true"
    class="Expander__ExpanderTitle-fukmjx-2 cwTaio"
  >
    <span
      aria-hidden="true"
      class="Expander__ExpanderPrefix-fukmjx-1 kcIvlE"
    >
      -
    </span>
    Organisaatio 2
  </button>
  <div
    class="Expander__ExpandedContents-fukmjx-3 efIYGM"
  >
    <div
      class="OrganizationDetails__Details-sc-4gjwy4-0 kRzJui"
    >
      <div
        class="OrganizationDetails__Description-sc-4gjwy4-1 busCdY"
      >
        <b
          class="typography__Bold-sc-1yq3b4j-6 jaOKTJ"
        >
          Tietojen käyttölupa:
        </b>
         Olet antanut tälle palvelutarjoajalle luvan käyttää tietojasi.
      </div>
      <a
        class="typography__Link-sc-1yq3b4j-5 epyGqB"
        href="https://confluence.csc.fi/pages/viewpage.action?pageId=76536741"
        target="_blank"
      >
        <test-file-stub
          classname="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 fdjWcT"
        />
        <b
          class="typography__Bold-sc-1yq3b4j-6 jaOKTJ"
        >
          Tarkempi kuvaus lähetetyistä tiedoista
        </b>
      </a>
    </div>
    <div
      class="LogEntries__Container-ufvf4x-0 zfOaI"
    >
      <div
        class="LogEntries__TopRow-ufvf4x-1 bimmMK"
      >
        <button
          aria-pressed="false"
          class="ButtonSmall__TextButton-r8zxw8-0 clXOxN"
        >
          Näytä tietojen käyttökerrat
        </button>
      </div>
    </div>
  </div>
</div>
`;
